--- a/loan app 2.0-1.ipynb
+++ b/loan app 2.0-1.ipynb
@@ -2,62 +2,37 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 112,
+            "execution_count": 1,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 "import pandas as pd\n",
                 "import numpy as np"
-            ],
-            "outputs": [],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
-            "execution_count": 113,
-            "source": [],
+            "execution_count": null,
+            "metadata": {},
             "outputs": [],
-            "metadata": {}
+            "source": []
         },
         {
             "cell_type": "code",
-            "execution_count": 148,
+            "execution_count": 4,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 "df=pd.read_csv('train_u6lujuX_CVtuZ9i (1).csv')"
-            ],
-            "outputs": [],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": 129,
-            "source": [
-                "df.head(5)"
-            ],
+            "metadata": {},
             "outputs": [
                 {
-                    "output_type": "execute_result",
                     "data": {
-                        "text/plain": [
-                            "    Loan_ID Gender Married Dependents     Education Self_Employed  \\\n",
-                            "0  LP001002   Male      No          0      Graduate            No   \n",
-                            "1  LP001003   Male     Yes          1      Graduate            No   \n",
-                            "2  LP001005   Male     Yes          0      Graduate           Yes   \n",
-                            "3  LP001006   Male     Yes          0  Not Graduate            No   \n",
-                            "4  LP001008   Male      No          0      Graduate            No   \n",
-                            "\n",
-                            "   ApplicantIncome  CoapplicantIncome  LoanAmount  Loan_Amount_Term  \\\n",
-                            "0             5849                0.0         NaN             360.0   \n",
-                            "1             4583             1508.0       128.0             360.0   \n",
-                            "2             3000                0.0        66.0             360.0   \n",
-                            "3             2583             2358.0       120.0             360.0   \n",
-                            "4             6000                0.0       141.0             360.0   \n",
-                            "\n",
-                            "   Credit_History Property_Area Loan_Status  \n",
-                            "0             1.0         Urban           Y  \n",
-                            "1             1.0         Rural           N  \n",
-                            "2             1.0         Urban           Y  \n",
-                            "3             1.0         Urban           Y  \n",
-                            "4             1.0         Urban           Y  "
-                        ],
                         "text/html": [
                             "<div>\n",
                             "<style scoped>\n",
@@ -176,23 +151,45 @@
                             "  </tbody>\n",
                             "</table>\n",
                             "</div>"
+                        ],
+                        "text/plain": [
+                            "    Loan_ID Gender Married Dependents     Education Self_Employed  \\\n",
+                            "0  LP001002   Male      No          0      Graduate            No   \n",
+                            "1  LP001003   Male     Yes          1      Graduate            No   \n",
+                            "2  LP001005   Male     Yes          0      Graduate           Yes   \n",
+                            "3  LP001006   Male     Yes          0  Not Graduate            No   \n",
+                            "4  LP001008   Male      No          0      Graduate            No   \n",
+                            "\n",
+                            "   ApplicantIncome  CoapplicantIncome  LoanAmount  Loan_Amount_Term  \\\n",
+                            "0             5849                0.0         NaN             360.0   \n",
+                            "1             4583             1508.0       128.0             360.0   \n",
+                            "2             3000                0.0        66.0             360.0   \n",
+                            "3             2583             2358.0       120.0             360.0   \n",
+                            "4             6000                0.0       141.0             360.0   \n",
+                            "\n",
+                            "   Credit_History Property_Area Loan_Status  \n",
+                            "0             1.0         Urban           Y  \n",
+                            "1             1.0         Rural           N  \n",
+                            "2             1.0         Urban           Y  \n",
+                            "3             1.0         Urban           Y  \n",
+                            "4             1.0         Urban           Y  "
                         ]
                     },
+                    "execution_count": 129,
                     "metadata": {},
-                    "execution_count": 129
+                    "output_type": "execute_result"
                 }
             ],
-            "metadata": {}
+            "source": [
+                "df.head(5)"
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": 116,
-            "source": [
-                "df.isnull().sum()"
-            ],
+            "metadata": {},
             "outputs": [
                 {
-                    "output_type": "execute_result",
                     "data": {
                         "text/plain": [
                             "Loan_ID               0\n",
@@ -211,34 +208,32 @@
                             "dtype: int64"
                         ]
                     },
+                    "execution_count": 116,
                     "metadata": {},
-                    "execution_count": 116
+                    "output_type": "execute_result"
                 }
             ],
-            "metadata": {}
+            "source": [
+                "df.isnull().sum()"
+            ]
         },
         {
             "cell_type": "code",
-            "execution_count": 117,
+            "execution_count": 5,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 "new_df=df.dropna()\n",
                 "new_df.head(5)\n",
                 "loan_df=new_df.drop('Loan_ID',axis=1)"
-            ],
-            "outputs": [],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
-            "execution_count": 118,
-            "source": [
-                "encoded_df=pd.get_dummies(loan_df,drop_first=True)\n",
-                "encoded_df.head\n",
-                "\n"
-            ],
+            "execution_count": 6,
+            "metadata": {},
             "outputs": [
                 {
-                    "output_type": "execute_result",
                     "data": {
                         "text/plain": [
                             "<bound method NDFrame.head of      ApplicantIncome  CoapplicantIncome  LoanAmount  Loan_Amount_Term  \\\n",
@@ -296,57 +291,80 @@
                             "[480 rows x 15 columns]>"
                         ]
                     },
+                    "execution_count": 6,
                     "metadata": {},
-                    "execution_count": 118
+                    "output_type": "execute_result"
                 }
             ],
-            "metadata": {}
+            "source": [
+                "encoded_df=pd.get_dummies(loan_df,drop_first=True)\n",
+                "encoded_df.head\n",
+                "\n"
+            ]
         },
         {
             "cell_type": "code",
-            "execution_count": 139,
+            "execution_count": 8,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 "y=encoded_df[['Loan_Status_Y']]\n",
                 "X = encoded_df[['Gender_Male', 'Married_Yes', 'ApplicantIncome', \n",
                 "      'LoanAmount', 'Credit_History']]"
-            ],
-            "outputs": [],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
-            "execution_count": 140,
+            "execution_count": 9,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 "from sklearn.impute import SimpleImputer\n",
                 "imp=SimpleImputer(strategy='mean')\n",
                 "X_imputed=imp.fit_transform(X)\n"
-            ],
-            "outputs": [],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
-            "execution_count": 141,
+            "execution_count": 10,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 "from sklearn.model_selection import train_test_split\n",
                 "X_train,X_test,y_train,y_test=train_test_split(X,y,random_state=10,test_size=0.2)\n"
-            ],
-            "outputs": [],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
-            "execution_count": 142,
+            "execution_count": 11,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 "from sklearn.ensemble import RandomForestClassifier\n",
                 "model=RandomForestClassifier(n_estimators=100,random_state=10)"
-            ],
-            "outputs": [],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
-            "execution_count": 143,
+            "execution_count": 13,
+            "metadata": {},
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "0.7916666666666666\n"
+                    ]
+                },
+                {
+                    "name": "stderr",
+                    "output_type": "stream",
+                    "text": [
+                        "<ipython-input-13-b2951fe20022>:1: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+                        "  model.fit(X_train,y_train)\n"
+                    ]
+                }
+            ],
             "source": [
                 "model.fit(X_train,y_train)\n",
                 "\n",
@@ -356,96 +374,78 @@
                 "\n",
                 "score=accuracy_score(y_pred,y_test)\n",
                 "print(score)\n"
-            ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "0.7916666666666666\n"
-                    ]
-                },
-                {
-                    "output_type": "stream",
-                    "name": "stderr",
-                    "text": [
-                        "<ipython-input-143-b2951fe20022>:1: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
-                        "  model.fit(X_train,y_train)\n"
-                    ]
-                }
-            ],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
-            "execution_count": 144,
+            "execution_count": 15,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 " #saving the model \n",
                 "import pickle \n",
                 "pickle_out = open(\"classifier.pkl\", mode = \"wb\") \n",
                 "pickle.dump(model, pickle_out) \n",
                 "pickle_out.close()"
-            ],
-            "outputs": [],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
-            "execution_count": 147,
-            "source": [
-                "loaded_model=pickle.load(open('classifier.pkl','rb'))\n",
-                "result=loaded_model.score(X_test,y_test)\n",
-                "print(result)"
-            ],
+            "execution_count": 16,
+            "metadata": {},
             "outputs": [
                 {
-                    "output_type": "stream",
                     "name": "stdout",
+                    "output_type": "stream",
                     "text": [
                         "0.7916666666666666\n"
                     ]
                 }
             ],
-            "metadata": {}
+            "source": [
+                "loaded_model=pickle.load(open('classifier.pkl','rb'))\n",
+                "result=loaded_model.score(X_test,y_test)\n",
+                "print(result)"
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
+            "metadata": {},
+            "outputs": [],
             "source": [
                 "\n"
-            ],
-            "outputs": [],
-            "metadata": {}
+            ]
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "source": [],
+            "metadata": {},
             "outputs": [],
-            "metadata": {}
+            "source": []
         }
     ],
     "metadata": {
-        "orig_nbformat": 4,
+        "interpreter": {
+            "hash": "76d6ee9b9168912caf795856486b8d651e8052cb42da298305185f8ae0050446"
+        },
+        "kernelspec": {
+            "display_name": "Python 3.8.8 64-bit (conda)",
+            "name": "python3"
+        },
         "language_info": {
-            "name": "python",
-            "version": "3.8.8",
-            "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
                 "version": 3
             },
-            "pygments_lexer": "ipython3",
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
             "nbconvert_exporter": "python",
-            "file_extension": ".py"
+            "pygments_lexer": "ipython3",
+            "version": "3.8.8"
         },
-        "kernelspec": {
-            "name": "python3",
-            "display_name": "Python 3.8.8 64-bit ('base': conda)"
-        },
-        "interpreter": {
-            "hash": "dca0ade3e726a953b501b15e8e990130d2b7799f14cfd9f4271676035ebe5511"
-        }
+        "orig_nbformat": 4
     },
     "nbformat": 4,
     "nbformat_minor": 2
